# FolkTech-Sentinel

./: .gitignore  LICENSE  README.md  alerts.py  config.py  install.py  intel.py  pyproject.toml  requirements.txt  sentinel.py
monitors/: network.py  process.py  tcc.py
src/sentinel/: __init__.py  install.py  intel.py  sentinel.py
src/sentinel/monitors/: network.py  process.py  tcc.py
